repair test